# marine-farm-cpp

./: .gitmodules  README.md
docs/: Doxyfile  header.html  index.html  main_page.md
docs/html/: _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  annotated.html  camera__nodelet_8cpp.html  camera__nodelet_8cpp__incl.map  camera__nodelet_8cpp__incl.md5  camera__nodelet_8cpp_source.html  camera__nodelet_8hpp.html  camera__nodelet_8hpp__dep__incl.map  camera__nodelet_8hpp__dep__incl.md5  camera__nodelet_8hpp__incl.map  camera__nodelet_8hpp__incl.md5  camera__nodelet_8hpp_source.html  cart__control__nodelet_8cpp.html  cart__control__nodelet_8cpp__incl.map  cart__control__nodelet_8cpp__incl.md5  cart__control__nodelet_8cpp_source.html  cart__control__nodelet_8hpp.html  cart__control__nodelet_8hpp__dep__incl.map  cart__control__nodelet_8hpp__dep__incl.md5  (+567 more)
experiments/: CMakeLists.txt  package.xml
experiments/config/: one_wall.yaml
experiments/launch/: one_wall.launch
farm_simulator/: CMakeLists.txt  nodelet_plugins.xml  package.xml
farm_simulator/cfg/: farm_simulator.cfg
farm_simulator/config/: farm_simulator.yaml
farm_simulator/include/farm_simulator/: farm_common.hpp  farm_nodelet.hpp  rviz_visualisation.hpp
farm_simulator/include/perlin_noise/: perlin_noise.hpp
farm_simulator/launch/: farm.launch  simulation.launch
farm_simulator/msg/: Alga.msg
farm_simulator/rviz/: farm_simulator.rviz
farm_simulator/src/: farm_common.cpp  farm_node.cpp  farm_nodelet.cpp  rviz_visualisation.cpp
farm_simulator/src/farm_simulator/: farm_common.cpp  farm_initialisation.cpp  farm_nodelet.cpp  farm_output.cpp  farm_visualisation.cpp
farm_simulator/src/perlin_noise/: perlin_noise.cpp
mf_common/: CMakeLists.txt  package.xml
mf_common/include/mf_common/: common.hpp  perlin_noise.hpp  spline.hpp
mf_common/msg/: Array2D.msg  EulerPose.msg  Float32Array.msg
mf_common/src/mf_common/: common.cpp  perlin_noise.cpp  spline.cpp
mf_experiments/: CMakeLists.txt  package.xml
mf_experiments/config/: mpc_test.yaml  one_wall.yaml
mf_experiments/include/mf_experiments/: clock_publisher.hpp  control_tester.hpp  experiment_stats.hpp  traj_publisher.hpp
mf_experiments/launch/: mpc_test.launch  one_wall.launch
mf_experiments/resources/: back_forth_wp.txt  mpc_test_wp.txt  sinusoidal_wp.txt  waypoints.txt
mf_experiments/rviz/: mfcpp.rviz
mf_experiments/src/mf_experiments/: clock_publisher.cpp  control_tester.cpp  experiment_stats.cpp  traj_publisher.cpp
mf_farm_simulator/: CMakeLists.txt  nodelet_plugins.xml  package.xml
mf_farm_simulator/cfg/: farm_simulator.cfg
mf_farm_simulator/config/: farm_simulator.yaml
mf_farm_simulator/include/mf_farm_simulator/: farm_common.hpp  farm_nodelet.hpp  rviz_visualisation.hpp
mf_farm_simulator/launch/: simulation.launch
mf_farm_simulator/msg/: Alga.msg  Algae.msg  Float32Array.msg
mf_farm_simulator/rviz/: farm_simulator.rviz
mf_farm_simulator/src/mf_farm_simulator/: farm_common.cpp  farm_initialisation.cpp  farm_nodelet.cpp  farm_output.cpp  rviz_visualisation.cpp
mf_mapping/: CMakeLists.txt  nodelet_plugins.xml  package.xml
mf_mapping/config/: mapping.yaml
mf_mapping/include/mf_mapping/: gp_nodelet.hpp
mf_mapping/msg/: Array2D.msg
mf_mapping/src/mf_mapping/: gp.cpp  gp_nodelet.cpp  gp_output.cpp
mf_mapping/srv/: LoadGP.srv  UpdateGP.srv
mf_navigation/: CMakeLists.txt  nodelet_plugins.xml  package.xml
mf_navigation/config/: navigation.yaml  planning.yaml
mf_navigation/include/mf_navigation/: cart_control_nodelet.hpp  lattice.hpp  mpc_node.hpp  mpc_nodelet.hpp  planning_logic.hpp  planning_nodelet.hpp
mf_navigation/resources/: one_wall_transitions.txt  one_wall_wp.txt
mf_navigation/src/mf_navigation/: cart_control_nodelet.cpp  mpc.cpp  mpc_node.cpp  mpc_nodelet.cpp  planning.cpp  planning_logic.cpp  planning_nodelet.cpp
mf_planning/: CMakeLists.txt  nodelet_plugins.xml  package.xml
mf_planning/config/: planning.yaml
mf_planning/include/mf_planning/: planning_nodelet.hpp
mf_planning/src/mf_planning/: planning.cpp  planning_nodelet.cpp
mf_robot_model/: CMakeLists.txt  package.xml
mf_robot_model/include/mf_robot_model/: robot_model.hpp
mf_robot_model/src/mf_robot_model/: robot_model.cpp
mf_robot_simulator/: CMakeLists.txt  package.xml
mf_robot_simulator/config/: robot_simulator.yaml
mf_robot_simulator/include/mf_robot_simulator/: robot_simulator.hpp
mf_robot_simulator/launch/: keyboard_teleop.launch
mf_robot_simulator/msg/: CartesianCommand.msg
mf_robot_simulator/scripts/: keyboard_teleop.py
mf_robot_simulator/src/mf_robot_simulator/: robot_simulator.cpp
mf_sensors_simulator/: CMakeLists.txt  nodelet_plugins.xml  package.xml
mf_sensors_simulator/config/: sensors_simulator.yaml
mf_sensors_simulator/include/mf_sensors_simulator/: camera_nodelet.hpp
mf_sensors_simulator/msg/: CameraOutput.msg  PixelRay.msg  RaycastRes.msg
mf_sensors_simulator/src/mf_sensors_simulator/: camera_nodelet.cpp  collision.cpp  output.cpp  ray_multi_cb.cpp
mf_sensors_simulator/srv/: MultiPoses.srv
osqp/: CMakeLists.txt  package.xml
osqp/include/osqp_eigen/: SparseMatrixHelper.hpp
osqp/src/osqp_eigen/: osqp_eigen.cpp
reactphysics3d/: CMakeLists.txt  package.xml
robot_model/: CMakeLists.txt  package.xml
robot_model/include/robot_model/: robot_model.hpp
robot_model/src/robot_model/: robot_model.cpp
robot_simulator/: CMakeLists.txt  package.xml
robot_simulator/config/: robot_simulator.yaml
robot_simulator/include/robot_simulator/: robot_simulator.hpp
robot_simulator/launch/: keyboard_teleop.launch  robot_simulator.launch
robot_simulator/msg/: Command.msg
robot_simulator/scripts/: keyboard_teleop.py
robot_simulator/src/robot_simulator/: robot_simulator.cpp
sensors_simulator/: CMakeLists.txt  nodelet_plugins.xml  package.xml
sensors_simulator/config/: sensors_simulator.yaml
sensors_simulator/include/sensors_simulator/: camera_nodelet.hpp
sensors_simulator/msg/: CameraOutput.msg
sensors_simulator/src/sensors_simulator/: camera_nodelet.cpp  collision.cpp  output.cpp
(+99 files in other folders)
