cmake_minimum_required(VERSION 2.8.3)
project(experiments)

## Compile as C++11, supported in ROS Kinetic and newer
# add_compile_options(-std=c++11)


########################
##  Configure Catkin  ##
########################

find_package(catkin REQUIRED)

catkin_package()


###########
## Build ##
###########

include_directories()
