<?xml version="1.0"?>
<package format="2">
  <name>mf_planning</name>
  <version>0.0.0</version>
  <description>The mf_planning package</description>
  <maintainer email="corentin.chauvin@gmail.com">Corentin Chauvin-Hameau</maintainer>
  <author email="corentin.chauvin@gmail.com">Corentin Chauvin-Hameau</author>
  <url type="website">https://github.com/CorentinChauvin/marine-farm-cpp</url>
  <license>LGPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>mf_robot_model</build_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
