<?xml version="1.0"?>
<package format="2">
  <name>mf_robot_simulator</name>
  <version>0.0.0</version>
  <description>The mf_robot_simulator package</description>
  <maintainer email="corentin.chauvin@gmail.com">Corentin Chauvin-Hameau</maintainer>
  <author email="corentin.chauvin@gmail.com">Corentin Chauvin-Hameau</author>
  <url type="website">https://github.com/CorentinChauvin/marine-farm-cpp</url>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>mf_robot_model</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>

  </export>
</package>
