<?xml version="1.0"?>
<package format="2">
  <name>osqp</name>
  <version>0.0.0</version>
  <description>The osqp package</description>
  <maintainer email="corentin.chauvin@gmail.com">Corentin Chauvin-Hameau</maintainer>
  <author email="corentin.chauvin@gmail.com">Corentin Chauvin-Hameau</author>
  <url type="website">https://github.com/CorentinChauvin/marine-farm-cpp</url>
  <license>LGPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
